--- a/desktop/style.scss
+++ b/desktop/style.scss
@@ -1,17 +1,28 @@
 @import "../styles/varibles";
 // @import "../node_modules/easyscss-kevin/components/components";
-@import "../node_modules/easyscss-kevin/components/functions";
+// @import "../node_modules/easyscss-kevin/components/functions";
 
 
 @media only screen 
-  and (min-width: 813px) {
+  and (min-width: 769px) {
 
+    // removed items on this resolution
+    .footer{
+        display: none;
+    }
+     // removed items on this resolution
+
+
+    html{
+        scroll-behavior: smooth;
+    }
 
       html,
       body{
           padding: 0px;
           margin: 0px;
           box-sizing: content-box;
+          
       }
 
       button{
@@ -59,45 +70,51 @@
 
             logo{
 
-                flex: 1 1 1vmax;
+                flex: 1 0 auto;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 align-content: center;
                 justify-items: center;
+                // border: 2px dashed red;
+                // width: 10vmax;
                 h4{
                     color:$color-primary-4;
                     font-size: 1.5rem;
                     padding: 0px;
                     margin: 0px;
+                    // border:2px dashed red;
+                    padding: 10px;
+                    padding-bottom: 0px;
+                    padding-top: 0px;
+                    
                 }
             }
 
             .nav{
                 
                 display: flex;
-                flex: 1 0 auto;
+                flex: 1 1 auto;
                 flex-direction: column;
                 padding: 0px;
                 margin:0px;
-                
-                
+                max-width: 100%;
+                width: 100%;
                 &__links{
 
                     
                     font-size: 1.2rem;
                     display: flex;
                     justify-content: flex-end;
-                    
+                    flex-flow: wrap;                   
                     list-style: none;
                     justify-items: center;
                     align-items: center;
-                    
-                    
+                
                     
                     &--item{
 
-                        margin: 30px;
+                        margin: 20px;
                         margin-bottom: 0px;
                         margin-top: 0px;
                         display: flex;
@@ -178,7 +195,7 @@
             display: grid;
             grid-template-columns: 40% auto;
             grid-template-areas: "l r";
-            height:550px;
+            height:600px;
             background-color: rgb(255, 255, 255);
             
 
@@ -217,12 +234,13 @@
                         display: flex;
                         flex-direction: column;
                         flex: 1 1 20%;
+                        flex-flow: row;
                         align-items: center;
                         justify-content: center;
 
                         a{
                             text-decoration: none;
-                            font-size: 2.7rem;
+                            font-size: 2.4rem;
                             color: $color-primary-4;
                         }
                     }
@@ -247,7 +265,7 @@
 
                         p{
                             color: $color-primary-4;
-                            font-size: 2.6vmax!important;
+                            font-size: 1.6rem!important;
                             padding: 0px;
                             margin: 0px;
                             margin-left: 20px;
@@ -262,7 +280,7 @@
                     flex: 1 1 30%;
                     display: grid;
                     grid-template-columns: 1fr 1fr;
-                    grid-template-rows: 3vmax;
+                    // grid-template-rows: 3vmax;
                     justify-items: center;
                     align-content: center;
 
@@ -272,6 +290,7 @@
                         width: 15vmax;
                         background-color: $color-primary-4;
                         border-radius: 2px;
+                        padding: 10px;
                         &:hover{
                             background-color: rgb(4, 68, 141);
                         }
@@ -279,8 +298,9 @@
                         a{
                             text-decoration: none;
                             color: white;
-                            font-size: 1.2rem;
-                            font-weight: bold;
+                            font-size: 1rem;
+                            font-weight: 500;
+                           
                         }
                     }
 
@@ -304,7 +324,7 @@
         hero Card====start
         */
         .heroCard{
-            margin: 30px;
+            // margin: 30px;
             padding: 10px;
             // background-color: rgb(228, 243, 242);
             background: -webkit-linear-gradient(64deg, #FE4AA4 0, #AAA7F6 81%);;
@@ -344,7 +364,11 @@
                     height: 4vmax;
                     border: 1px solid transparent;
                     background-color: $color-primary-4;
-                    font-size: 1.4rem;
+                    font-size: 2.6vmin;
+                    &:hover{
+                        background-color: rgb(4, 68, 141);
+                        border-radius: 4px;
+                    }
 
                     a{
 
@@ -364,8 +388,8 @@
         */
         #about_me{
             border: 1px solid transparent;
-            border-bottom-color: $color-primary-4;
-            background-color: rgb(255, 252, 252);
+            // border-bottom-color: $color-primary-4;
+            // background-color: rgb(185, 222, 253);
             height: 40vmax;
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -406,22 +430,21 @@
 
                     div{
                         margin: 5px;
-                        
-                        width: 10px;
-                        height: 10px;
+                        width: 15px;
+                        height: 15px;
                         // background-color: red;
                         border-radius: 50%;
 
                         &:nth-child(1){
-                            background-color: rgb(128, 0, 49);
+                            background-color: rgb(0, 60, 128);
                         }
 
                         &:nth-child(2){
-                            background-color: rgb(0, 70, 128);
+                            background-color: rgb(0, 128, 90);
                         }
 
                         &:nth-child(3){
-                            background-color: rgb(1, 221, 67);
+                            background-color: rgb(221, 118, 1);
                         }
                     }
                 }
@@ -440,8 +463,8 @@
                 
 
                 img{
-                    width:60%;
-                    max-width: 65%;
+                    width:70%;
+                    max-width: 70%;
                 }
             }
 
@@ -452,18 +475,19 @@
                 justify-content: center;
                 align-items: center;
                 justify-items: center;
-                align-content: center;
+                align-content: flex-end;
                 padding: 0px;
                 margin: 0px;
                 background-color: rgb(245, 244, 244);
 
+                // border: 2px dashed red;
+                
                 p{
-                    font-size: 1.8rem;
+                    font-size: 1.3rem;
                     padding: 40px;
                     margin: 0px;
                     padding-bottom: 0px;
                     padding-top: 0px;
-
                 }
 
             }
@@ -471,14 +495,15 @@
             .card__button{
                 background-color: rgb(245, 244, 244);
                 grid-area: b;
-                padding: 0px;
-                margin: 0px;
+                padding: 0px!important;
+                margin: 0px!important;
+                
 
                 button{
 
+                    transition: background-color 0.5s;
                     &:hover {
-                        background: -webkit-linear-gradient(64deg, #085e86 0, #1e98df 81%);
-                      
+                        background:rgb(4, 162, 235);
                     }
                     
                 }
@@ -493,9 +518,138 @@
            skills=====start
         */
 
-        .cardSkills{
 
-            display: none;
+        .cardSkills{
+            display: grid;
+            grid-template-columns: 1fr;
+            // border: 1px dashed rgb(224, 66, 66);
+            background-color: rgb(248, 248, 248);
+
+            .card__title{
+                display: flex;
+                flex-direction: column;
+                align-content: center;
+                justify-content: center;
+                h4{
+                    color: $color-primary-4;
+                    padding: 0px;
+                    margin: 1.2vmax;
+                    align-self: center;
+                    font-size: 2vmax;
+                }
+
+                // border: 1px solid $color-primary-4;
+                padding: 0px;
+                margin: 0px;
+            }
+
+            .card__desc{
+                display: grid;
+                grid-template-columns: 1fr;
+
+                p{
+                    // border: 2px dashed red;
+                    width: 60%;
+                    align-self: center;
+                    justify-self: center;
+                    font-size: 1.2rem;
+                }
+
+                .skill_wrapper{
+                    display: grid;
+                    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                    grid-template-rows: 300px;
+                    grid-gap: 30px;
+                    margin: 15vmax;
+                    margin-top: 3vmax;
+                    margin-bottom: 5vmax;
+                    
+                    
+
+                    .skill{
+                        background-color: rgb(248, 251, 253);
+                        padding: 1.5vmax;
+                        display: flex;
+                        flex-direction: column;
+                        height: 100%;
+                        box-shadow: -1px 2px 7px rgba(0,0,0,0.4);
+                        
+                        
+
+                        &__icon{
+                            // border: 2px dashed red;
+                            flex: 1 0 auto;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            padding-bottom: 0px;
+                            margin-bottom: 0px;
+
+                            strong{
+
+                                font-size: 1.1rem;
+                                padding: 10px;
+                                color: rgb(12, 12, 12);
+                                margin: 0px;
+                            }
+
+
+                            span{
+                                background-color: rgb(0, 162, 255);
+                                padding: 10px;
+                                border-radius: 50%;
+                                width: 60px;
+                                height: 60px;
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                                justify-content: center;
+                                i{
+                                    font-size: 2rem;
+                                    color: white;
+                                }
+                            }
+
+                        }
+
+                        &__show{
+                            // border: 2px dashed green;
+                            flex: 0 1 65%;
+                            display: flex;
+                            flex-direction: row;
+                            flex-flow: wrap;
+                            justify-content: space-between;
+                            padding: 10px;
+                            padding-top: 0px;
+                            margin-top: 0px;
+                            
+
+                            span{
+                                margin: 5px;
+                                font-weight: bold;
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: center;
+                                align-items: center;
+
+                                span{
+                                    font-size: 0.8rem;
+                                }
+
+                                i{
+                                    font-size: 1.7rem;
+                                    font-weight: 100!important;
+                                }
+                            }
+                        }
+                        
+
+                        
+                    }
+                }
+
+          }
         }
 
         /* 
@@ -515,16 +669,18 @@
         projects{
 
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr; 
+            grid-template-columns: repeat(auto-fit,minmax(300px,1fr)); 
             grid-gap: 20px;
             padding: 5vmax;
+            
+            
 
             Projectcard{
-                display: grid;
-                grid-template-columns: 1fr;
                 border: 1px solid rgb(218, 214, 214);
                 border-radius: 2px;
-                background-color: rgb(241, 241, 241);
+                background-color: rgb(255, 255, 255);
+                display: grid;
+                grid-template-columns: 1fr!important;
                 
 
                 .card__img{
@@ -551,7 +707,7 @@
 
                 .card__desc{
                     p{
-                        font-size: 1.2rem;
+                        font-size: 1rem;
                         margin: 10px;
                     }
                 }
@@ -567,6 +723,7 @@
                     button{
                         flex: 1 1 auto;
                         height: 3vmax;
+                        background-color: rgb(0, 102, 255);
                         a{
                             font-size: 1rem;
                             
@@ -593,7 +750,7 @@
                 padding: 15px;
                 text-decoration: none;
                 color: $main-text-color;
-                background-color: $color-primary-4;
+                background-color: rgb(0, 102, 255);
 
                 &:hover{
                     background-color: rgb(3, 106, 165);
@@ -606,6 +763,132 @@
            projects=====end
         */
 
+
+        /* 
+           Methodology=====Start
+        */
+
+        .methodology{
+            background-color: goldenrod;
+            display: grid;
+            grid-template-columns: repeat(12,1fr);
+            grid-template-areas: 't t'
+                                'b b';
+            padding: 40px;
+            
+            &__header{
+                grid-area: t;
+                grid-column: 3/-3;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                
+                h4{
+                    font-size: 3rem;
+                }
+            }
+
+            .methodology__container{
+                display: grid;
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+                grid-area: b;
+                grid-column: 2/-2;
+                grid-gap: 30px;
+                
+            }
+
+            .methodology__item{
+            
+                background-color: rgb(255, 255, 255);
+                // height: 300px;
+                display:flex;
+                flex-direction: column;
+                align-content: center;
+                justify-items: center;
+                align-content: center;
+                justify-content: center;
+                justify-items: center;
+                padding: 3vmax;
+                border-radius: 10px;
+
+                &--icon{
+                    display: flex;
+                    flex-direction:column;
+                    justify-items: center;
+                    // border: 1px solid red;
+                    align-items: center;
+
+                    img{
+                        width: 100%;
+                        max-width: 100%;
+                    }
+                    
+                }
+
+                &--title{
+                    // color: red;
+                    
+
+                    h4{
+            
+                        display: flex;
+                        flex-direction: row;
+                        padding: 0px!important;
+                        margin: 0px;
+                        margin-top: 5px;
+                        margin-bottom: 5px;
+                        align-content: center;
+                        justify-items: center;
+                        align-items: center;
+                        grid-gap: 10px;
+
+                        span:nth-child(1){
+                            color: rgb(0, 140, 255);
+                            font-size: 1.6rem;
+                            
+                            
+                            
+                        }
+                        span:nth-child(2){
+                            color: rgb(24, 24, 24);
+                            font-size: 0.9rem;
+                        }
+
+                        
+                    }
+                    
+                    
+
+                }
+
+                &--desc{
+
+                    p{
+                        color: rgb(184, 184, 184);
+                        margin-top: 0px;
+                    }
+                }
+                
+
+
+            }
+        }
+        
+        /* 
+           Methodology=====End
+        */
+
+        /*
+        ==================testimonies===============
+        */
+
+        .testimonies{
+            display: none;
+        }
+
+        /*
+        ==================testimonies========end
+        */
 
 
 
