--- a/mobile/style.css
+++ b/mobile/style.css
@@ -134,7 +134,14 @@ content card end component
 /*display Flex function*/
 /*display Grid function*/
 /* Portrait and Landscape */
-@media only screen and (max-width: 812px) {
+@media only screen and (max-width: 768px) {
+  html {
+    user-zoom: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
   #navbar {
     display: none;
   }
@@ -161,6 +168,74 @@ content card end component
     -webkit-transform: translateX(30px) translateY(20px);
             transform: translateX(30px) translateY(20px);
     border: 5px solid white;
+  }
+  .cardSkills .card__title h4 {
+    font-size: 1.1rem;
+  }
+  .cardSkills .card__desc div.skill_wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 10px;
+  }
+  .cardSkills .card__desc div.skill_wrapper .skill {
+    background-color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0px;
+    border-radius: 10px;
+  }
+  .cardSkills .card__desc div.skill_wrapper .skill__icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 20px;
+  }
+  .cardSkills .card__desc div.skill_wrapper .skill__icon span i {
+    font-size: 2.6rem;
+    color: #00a2ff;
+  }
+  .cardSkills .card__desc div.skill_wrapper .skill__show {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    padding: 20px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    justify-items: center;
+  }
+  .cardSkills .card__desc div.skill_wrapper .skill__show span {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 1vmax;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .cardSkills .card__desc div.skill_wrapper .skill__show span i {
+    font-size: 2rem;
   }
   body {
     background-color: #f5fcff;
@@ -303,16 +378,22 @@ content card end component
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding: 0px;
+    margin: 0px;
   }
   section.head profile profile_desc desc socialmedia a {
     color: #050D2A;
     font-size: 5vmax;
     text-decoration: none;
   }
-  section.head profile profile_desc desc p {
-    margin-top: 3px;
-    padding: 20px;
-    padding-top: 0px;
+  section.head profile profile_desc desc intro {
+    border: 2px dashed transparent;
+  }
+  section.head profile profile_desc desc intro p {
+    padding: 0px;
+    margin: 0px;
+    color: #050D2A !important;
+    font-size: 1.4rem;
   }
   /*======head====*/
   hr#separator {
@@ -522,10 +603,9 @@ content card end component
     border: 2px solid #081747;
     padding: 10px;
     border: 5px solid transparent;
-    border-top-color: white;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 7px;
-    background-color: #517291;
+    background-color: white;
   }
   .testimony__img {
     -ms-grid-row: 2;
@@ -545,55 +625,44 @@ content card end component
   .testimony__img span {
     color: white;
     padding: 0px;
-    margin: 20px;
+    margin: 10px;
     font-weight: bold;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    color: #888686;
+  }
+  .testimony__img span small {
+    font-size: 0.7rem;
+    color: #050D2A;
   }
   .testimony__img img {
-    width: 20vw;
+    width: 15vw;
     border-radius: 50%;
     background-color: #00a2ff;
     margin: 0px;
     padding: 0px;
-    border: 2px dashed white;
-    -webkit-animation-name: rotate;
-            animation-name: rotate;
-    -webkit-animation-duration: 4s;
-            animation-duration: 4s;
-    -webkit-animation-delay: 1s;
-            animation-delay: 1s;
-    -webkit-animation-iteration-count: infinite;
-            animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
-  }
-  .testimony::before {
-    content: "";
-    background-color: white;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    position: absolute;
+    border: 2px solid #00c3ff;
   }
   .testimony__text {
-    padding: 10px;
+    padding: 5px;
     padding-bottom: 0px;
     margin: 0px;
-    color: red;
   }
   .testimony__text p {
-    margin: 10px;
+    margin: 5px;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
-  }
-  .testimony__text p::before {
-    content: "\"";
-    font-size: 10vmax;
-    position: absolute;
-    -webkit-transform: translateY(120px);
-            transform: translateY(120px);
-    font-family: cursive;
+    color: #aaa9a9;
   }
   #testimonySeparator {
     width: .1px;
@@ -635,6 +704,117 @@ content card end component
   }
   .callToAction {
     display: none;
+  }
+  .methodology {
+    background-color: #050D2A;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[12];
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-areas: 't t' 'b b';
+    padding-bottom: 40px;
+  }
+  .methodology__header {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: t;
+    grid-column: 1/-1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .methodology__header h4 {
+    font-size: 2rem;
+  }
+  .methodology .methodology__container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (minmax(250px, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: b;
+    grid-column: 2/-2;
+    grid-gap: 30px;
+  }
+  .methodology .methodology__item {
+    background-color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    justify-items: center;
+    align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    padding: 3vmax;
+    border-radius: 10px;
+  }
+  .methodology .methodology__item--icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .methodology .methodology__item--icon img {
+    width: 100%;
+    max-width: 100%;
+  }
+  .methodology .methodology__item--title h4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 0px !important;
+    margin: 0px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    grid-gap: 30px;
+  }
+  .methodology .methodology__item--title h4 span:nth-child(1) {
+    color: #008cff;
+    font-size: 1.6rem;
+  }
+  .methodology .methodology__item--title h4 span:nth-child(2) {
+    color: #181818;
+    font-size: 0.9rem;
+    padding: 10px;
+  }
+  .methodology .methodology__item--desc p {
+    color: #b8b8b8;
+    margin-top: 0px;
   }
 }
 /*# sourceMappingURL=style.css.map */
