--- a/mobile/style.scss
+++ b/mobile/style.scss
@@ -1,11 +1,21 @@
 @import "../styles/varibles";
 @import "../node_modules/easyscss-kevin/components/components";
 @import "../node_modules/easyscss-kevin/components/functions";
+// @import "./module/methodology";
 
 
 /* Portrait and Landscape */
 @media only screen 
-  and (max-width: 812px) {
+  and (max-width: 768px) {
+      html{
+          user-zoom: none;
+          user-select: none;
+      }
+
+    // removed items on this resolution
+   
+
+     // removed items on this resolution
 
 
     #navbar{
@@ -53,9 +63,84 @@
     }
 
 }
+    // about me section end
 
 
-    // end
+    
+    // ==skills section
+
+    .cardSkills{
+
+        .card__title{
+            h4{
+                font-size: 1.1rem;
+            }
+        }
+
+        .card__desc{
+
+            
+            div.skill_wrapper{
+
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-gap: 10px;
+
+                .skill{
+                    background-color: rgb(255, 255, 255);
+                    display: flex;
+                    flex-direction: column;
+                    padding: 0px;
+                    border-radius: 10px;
+
+                    &__icon{
+                        
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        padding: 20px;
+                        
+                        // background-color: rgb(250, 250, 250);
+                        
+
+                        span{
+                            i{
+                                font-size: 2.6rem;
+                                color: rgb(0, 162, 255);
+                            }
+                        }
+                        
+                    }
+
+                    &__show{
+                        display: grid;
+                        grid-template-columns: 1fr 1fr 1fr;
+                        padding: 20px;
+                        align-items: center;
+                        justify-content: space-around;
+                        justify-items: center;
+
+
+
+                        span{
+
+                            i{
+                                font-size: 2rem;
+                            }
+                            display: flex;
+                            flex-direction: column;
+                            margin: 1vmax;
+                            align-items: center;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    // ===Skills section
+
+
 
     body{
         background-color: rgb(245, 252, 255);
@@ -115,10 +200,7 @@
     section.head{
         display: grid;
         background-color: white;
-
-        // background-image: url("../assets/images/bg-19.svg");
         background-repeat: no-repeat;
-        // background-size: contain;
         background-position: center;
 
     // navigation bar
@@ -150,6 +232,7 @@
     //===========profileImage
     profile{
         /*<---profileImage---*/
+        
         profileImage{
 
             color: $color-primary-4;
@@ -162,8 +245,6 @@
                 width: 10%0%;
                 max-width: 90%;
                 max-height: 99%;
-                // border-radius: 50%;
-                // background: white;
             }
 
         }/*<---profileImage end---*/
@@ -195,6 +276,8 @@
                 socialmedia{
                     display: flex;
                     flex-direction: column;
+                    padding: 0px;
+                        margin: 0px;
                     a{
                         color: $color-primary-4;
                         font-size: 5vmax;
@@ -202,11 +285,18 @@
                     }
                 }
 
-                p{
-                    margin-top: 3px;
-                    padding: 20px;
-                    padding-top: 0px;
+                intro{
+                    border: 2px dashed transparent;
+                    p{
+                        padding: 0px;
+                        margin: 0px;
+                        color: $color-primary-4!important;
+                        font-size: 1.4rem;
+                    }
+
                 }
+
+                
             }
         }
 
@@ -295,7 +385,6 @@
     // ==================testimony============
 
     .testimonyWrapper{
-
         margin-bottom: 10vh;
     }
 
@@ -306,10 +395,9 @@
         border: 2px solid $color-primary-3;
         padding: 10px;
         border: 5px solid transparent;
-        border-top-color: white;
-        border-radius: 20px;
+        border-radius: 10px;
         padding: 7px;
-        background-color: rgb(81, 114, 145);
+        background-color: rgb(255, 255, 255);
         
         
         
@@ -325,76 +413,45 @@
             padding: 10px;
             
             
+            
 
             span{
                 color: white;
                 padding: 0px;
-                margin: 20px;
+                margin: 10px;
                 font-weight: bold;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                color: rgb(136, 134, 134);
+
+                small{
+                    font-size: 0.7rem;
+                    color: $color-primary-4;
+                }
 
                 
             }
             
             img{
-                width: 20vw;
+                width: 15vw;
                 border-radius: 50%;
                 background-color: rgb(0, 162, 255);
                 margin: 0px;
                 padding: 0px;
-                border: 2px dashed white;
-                animation-name: rotate;
-                animation-duration: 4s;
-                animation-delay: 1s;
-                animation-iteration-count: infinite;
-                animation-timing-function: linear;
-                
+                border: 2px solid rgb(0, 195, 255);                
             }
         }
 
 
-        &::before{
-            
-            content: "";
-            background-color: rgb(255, 255, 255);
-            height: 10px;
-            width: 10px;
-            border-radius: 50%;
-            position:absolute;
-            // transform: translateY(36px) translateX(-40px);
-        }
-
-        // &::after{
-            
-        //     content: "";
-        //     background-color: rgb(255, 255, 255);
-        //     height: 10px;
-        //     width: 10px;
-        //     border-radius: 50%;
-        //     position:absolute;
-        //     transform: translateY(45vh);
-        // }
-
         &__text{
-            padding: 10px;
+            padding: 5px;
             padding-bottom: 0px;
             margin: 0px;
-            color: red;
             p{
-                margin: 10px;
+                margin: 5px;
                 user-select: none;
-                
-                
-                &::before{
-
-                    content: "\"";
-                    font-size: 10vmax;
-                    position: absolute;
-                    transform: translateY(120px);
-                    font-family: cursive;
-                }
-
-
-                
+                color: rgb(170, 169, 169);
             }
 
             
@@ -406,7 +463,6 @@
         width: .1px;
         border: 2px solid transparent;
         height: 120px;
-        // transform: translateX(-110px);
         background-color: white;
         
     }
@@ -460,10 +516,123 @@
 
 
 
+// Methodology s
 
 
+.methodology{
+    background-color: $color-primary-4;
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-areas: 't t'
+                        'b b';
+    // padding: 40px;
+    padding-bottom: 40px;
+    
+    &__header{
+        grid-area: t;
+        grid-column: 1/-1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        h4{
+            font-size: 2rem;
+        }
+    }
 
+    .methodology__container{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-area: b;
+        grid-column: 2/-2;
+        grid-gap: 30px;
+        
+    }
+
+    .methodology__item{
+    
+        background-color: rgb(255, 255, 255);
+        // height: 300px;
+        display:flex;
+        flex-direction: column;
+        align-content: center;
+        justify-items: center;
+        align-content: center;
+        justify-content: center;
+        justify-items: center;
+        padding: 3vmax;
+        border-radius: 10px;
+
+        &--icon{
+            display: flex;
+            flex-direction:column;
+            justify-items: center;
+            // border: 1px solid red;
+            align-items: center;
+            // border: 2px dashed red;
+            
+
+            img{
+                width: 100%;
+                max-width: 100%;
+            }
+            
+        }
+
+        &--title{
+            // color: red;
+            
+
+            h4{
+    
+                display: flex;
+                flex-direction: row;
+                padding: 0px!important;
+                margin: 0px;
+                margin-top: 5px;
+                margin-bottom: 5px;
+                align-content: center;
+                justify-items: center;
+                align-items: center;
+                grid-gap: 30px;
+
+
+                span:nth-child(1){
+                    color: rgb(0, 140, 255);
+                    font-size: 1.6rem;
+                    
+                    
+                    
+                }
+                span:nth-child(2){
+                    color: rgb(24, 24, 24);
+                    font-size: 0.9rem;
+                    padding: 10px;
+                }
+
+                
+            }
+            
+            
+
+        }
+
+        &--desc{
+
+            p{
+                color: rgb(184, 184, 184);
+                margin-top: 0px;
+            }
+        }
+        
+
+
+    }
 }
+
+
+
+}//media queries endd
 
 
 
