--- a/desktop/style.scss
+++ b/desktop/style.scss
@@ -790,7 +790,7 @@
 
             .methodology__container{
                 display: grid;
-                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+                grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
                 grid-area: b;
                 grid-column: 2/-2;
                 grid-gap: 30px;
